--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -8,7 +8,7 @@
 }
 .container_nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-direction: row;
   width: 85%;
 }
