--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --white: #ffffff;
   --primary: #1d4d8b;
   --secondary: #113c73;
-
+  --secondary-light: #4285F4;
   --font-roboto: 'Roboto', sans-serif;
 }
 * {
@@ -14,4 +14,5 @@
 *:after,
 *:before {
   font-family: var(--font-roboto);
+  font-style: normal;
 }
